--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -1,3 +1,7 @@
+<!-- Leaving this script here incase I ever want to integrate a MailChimp weekly 
+email of posts I’ve added to the site (what it's currently configured to do). Right
+now I've just deactivated this section of the website entirely.-->
+
 <form method="POST" action="{{ site.mailchimp_action }}&amp;c=?" id="mc-signup" name="mc-embedded-subscribe-form" novalidate>
   <!-- This is required for the form to work correctly -->
   <div style="position: absolute; left: -5000px;" aria-hidden="true">
